@@ -13,9 +13,6 @@ echo_v ()
   fi
 }
 
-LC_ALL=en_US
-export LC_ALL
-
 error_out=/dev/null
 if [ "$1" = "-v" ]; then
   verbose=1
@@ -25,6 +22,9 @@ for I in ${srcdir:-.}/collate/*.in; do
   echo_v "Sorting $I"
   name=`basename $I .in`
   ./unicode-collate $I > collate.out
+  if [ $? -eq 2 ]; then
+    exit 0
+  fi   
   diff collate.out ${srcdir:-.}/collate/$name.unicode || 
     fail "unexpected error when using g_utf8_collate() on $I"
   ./unicode-collate --key $I > collate.out
